{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 20,
  "lineage": "9e6f1fe8-3527-9962-75e5-d3683e0b8567",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Web-JT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-060c4f2d72966500a",
            "arn": "arn:aws:ec2:eu-west-2:697450975637:instance/i-0b04db4cd0c9eedba",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b04db4cd0c9eedba",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cb8cec9fc66e88b3",
            "private_dns": "ip-10-10-1-94.eu-west-2.compute.internal",
            "private_ip": "10.10.1.94",
            "public_ip": "35.177.72.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04c25c9b9393038d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-096bd3af8446fa37f",
            "tags": {
              "Name": "HTTPSWebServer"
            },
            "tags_all": {
              "Name": "HTTPSWebServer"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f3fb74221c27802c"
            ]
          },
          "dependencies": [
            "aws_security_group.HTTPS-Web-Server",
            "aws_subnet.defaulta",
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "https_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:697450975637:internet-gateway/igw-017ed455ad5cef556",
            "id": "igw-017ed455ad5cef556",
            "owner_id": "697450975637",
            "tags": {
              "Name": "https default internet gw"
            },
            "tags_all": {
              "Name": "https default internet gw"
            },
            "vpc_id": "vpc-0dfd0295203b61d65"
          },
          "dependencies": [
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "HTTPS-LOAD-Front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:697450975637:loadbalancer/net/HTTPS-LOAD-Front/aa73e630d08d7751",
            "arn_suffix": "net/HTTPS-LOAD-Front/aa73e630d08d7751",
            "dns_name": "HTTPS-LOAD-Front-aa73e630d08d7751.elb.eu-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:697450975637:loadbalancer/net/HTTPS-LOAD-Front/aa73e630d08d7751",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "HTTPS-LOAD-Front",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-040558fa4151f7f44"
              },
              {
                "subnet_id": "subnet-091367a68e76470ba"
              },
              {
                "subnet_id": "subnet-096bd3af8446fa37f"
              }
            ],
            "subnets": [
              "subnet-040558fa4151f7f44",
              "subnet-091367a68e76470ba",
              "subnet-096bd3af8446fa37f"
            ],
            "vpc_id": "vpc-0dfd0295203b61d65",
            "zone_id": "ZD4D7Y8KGAS4G"
          },
          "dependencies": [
            "aws_subnet.defaulta",
            "aws_subnet.defaultb",
            "aws_subnet.defaultc",
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "HTTPSServer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:697450975637:listener/net/HTTPS-LOAD-Front/aa73e630d08d7751/1801d382652a6f44",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:697450975637:targetgroup/https-targets/a5aaab167b42a490",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:697450975637:listener/net/HTTPS-LOAD-Front/aa73e630d08d7751/1801d382652a6f44",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:697450975637:loadbalancer/net/HTTPS-LOAD-Front/aa73e630d08d7751",
            "port": 443,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.HTTPS-LOAD-Front",
            "aws_lb_target_group.https-targets",
            "aws_subnet.defaulta",
            "aws_subnet.defaultb",
            "aws_subnet.defaultc",
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "https-targets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:697450975637:targetgroup/https-targets/a5aaab167b42a490",
            "arn_suffix": "targetgroup/https-targets/a5aaab167b42a490",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:697450975637:targetgroup/https-targets/a5aaab167b42a490",
            "lambda_multi_value_headers_enabled": false,
            "name": "https-targets",
            "port": 443,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0dfd0295203b61d65"
          },
          "dependencies": [
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "HTTPSTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:697450975637:route-table/rtb-03d5c7160109771b1",
            "id": "rtb-03d5c7160109771b1",
            "owner_id": "697450975637",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-017ed455ad5cef556",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "HTTPSRoutingTable"
            },
            "tags_all": {
              "Name": "HTTPSRoutingTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-0dfd0295203b61d65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.https_gw",
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04743f14efe80312d",
            "route_table_id": "rtb-03d5c7160109771b1",
            "subnet_id": "subnet-096bd3af8446fa37f"
          },
          "dependencies": [
            "aws_internet_gateway.https_gw",
            "aws_route_table.HTTPSTable",
            "aws_subnet.defaulta",
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da193d0f971dd2ae",
            "route_table_id": "rtb-03d5c7160109771b1",
            "subnet_id": "subnet-040558fa4151f7f44"
          },
          "dependencies": [
            "aws_internet_gateway.https_gw",
            "aws_route_table.HTTPSTable",
            "aws_subnet.defaultb",
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e245243fe151715c",
            "route_table_id": "rtb-03d5c7160109771b1",
            "subnet_id": "subnet-091367a68e76470ba"
          },
          "dependencies": [
            "aws_internet_gateway.https_gw",
            "aws_route_table.HTTPSTable",
            "aws_subnet.defaultc",
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "HTTPS-Web-Server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:697450975637:security-group/sg-0f3fb74221c27802c",
            "description": "Allow ssh and https traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f3fb74221c27802c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "HTTPSWeb-HTTPS",
            "name_prefix": "",
            "owner_id": "697450975637",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0dfd0295203b61d65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "defaulta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:697450975637:subnet/subnet-096bd3af8446fa37f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-096bd3af8446fa37f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697450975637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dfd0295203b61d65"
          },
          "dependencies": [
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "defaultb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:697450975637:subnet/subnet-040558fa4151f7f44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040558fa4151f7f44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697450975637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dfd0295203b61d65"
          },
          "dependencies": [
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "defaultc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:697450975637:subnet/subnet-091367a68e76470ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.10.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-091367a68e76470ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "697450975637",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0dfd0295203b61d65"
          },
          "dependencies": [
            "aws_vpc.HTTP-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "HTTP-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:697450975637:vpc/vpc-0dfd0295203b61d65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-02362afb6111deb2e",
            "default_route_table_id": "rtb-0ea7d492439dbb775",
            "default_security_group_id": "sg-068389028bc9c3421",
            "dhcp_options_id": "dopt-5226183a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0dfd0295203b61d65",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea7d492439dbb775",
            "owner_id": "697450975637"
          }
        }
      ]
    }
  ]
}